--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-commerce</title>
-</head>
-<link rel="stylesheet" href="/styles.css">
-<body>
+  </head>
+  <link rel="stylesheet" href="/styles.css" />
+  <body>
     <nav>
-        <div class="nav-bar">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLvpkZCkbs1lW8WUKwLAJPm4dEjXRs90eAjQ&s" alt="">
-            <div class="nav-links">
-                <a href="https://github.com/jonah-cod/e_commerce.git">Home</a>
-                <a href="">Account</a>
-                <a href="">Cart</a>
-            </div>
+      <div class="nav-bar">
+        <img
+          src="https://www.shutterstock.com/image-illustration/ecommerce-icon-glassy-blue-button-260nw-144506366.jpg"
+          alt=""
+        />
+        <div class="nav-links">
+          <a href="">Home</a>
+          <a href="">Account</a>
+          <a href="">Cart</a>
         </div>
+      </div>
     </nav>
+    <div class="container">
+      <h4>Products</h4>
+      <div class="products" id="products"></div>
+      <div class="product-detail inactive" id="prevent">
+        <div id="popup">
+         
+        </div>
+      </div>
+    </div>
 
-
-
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/index.js"></script>
-</body>
+  </body>
 </html>
