--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       </div>
     </nav>
     <div class="container">
-      <h4>Products</h4>
+      <div class="filter">
+        <button>Category</button>
+        <button>Price</button>
+        <button>Rating</button>
+        <button>Offer</button>
+      </div>
+      <h1>Products For You.</h1>
       <div class="products" id="products"></div>
       <div class="product-detail inactive" id="prevent">
         <div id="popup">
